--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,18 @@ jobs:
         python-version: ${{ matrix.python-version }}
         architecture: x64
 
-    - name: Install dependencies
-      run: pip install -r requirements-dev.txt
-
-    - name: Test with pytest
+    - name: Install pipenv
       run: |
-        export PYTHONPATH=$PYTHONPATH:dag
-        pytest
+        python -m pip install --upgrade pipenv
+
+    - name: Install deps
+      run: |
+        make install
+
+    - name: Run lint
+      run: |
+        make lint
+
+    - name: Run test
+      run: |
+        make test
