--- a/Pipfile
+++ b/Pipfile
@@ -8,5 +8,5 @@ name = "pypi"
 [dev-packages]
 black = "==23.3.0"
 isort = "==5.12.0"
-pytest = "==7.2.0"
-tomli = "==2.0.1"
+pytest = "==7.3.1"
+#tomli = "==2.0.1"
