--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,7 @@ target-version = ["py39", "py310", "py311"]
 profile = "black"
 known_local_folder = ["dag"]
 sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+
+[tool.pytest.ini_options]
+addopts = "--tb=native"
+testpaths = ["tests"]
