--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,5 @@
 name: CI
-run-name: CI triggered by @${{ github.actor }}
+run-name: CI checks triggered by @${{ github.actor }}
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  ci-checks:
+  checks:
     name: Run checks on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
     timeout-minutes: 5
